Fixed scrollbar on phones

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,30 +161,32 @@ mat-icon:hover {
   }
 }
 
-/* width */
-::-webkit-scrollbar {
-  height: 10px;
-  width: 10px;
-}
+@media only screen and (min-width: 500px) {
+  /* width */
+  ::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+  }
 
-::-webkit-scrollbar-corner{
-  background-color: transparent;
-}
+  ::-webkit-scrollbar-corner{
+    background-color: transparent;
+  }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #8d8d8d;
-  border-radius: 10px;
-  border-color: #b3b3b3;
-}
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #8d8d8d;
+    border-radius: 10px;
+    border-color: #b3b3b3;
+  }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #616161;
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #616161;
+  }
 }
